changed css font size variable name to match other font size variables, turned the slider font sizes into their own css variable, created a h2 css variable and applied to the h2 in the modal as on small screens the congratulations on the modal was overflowing because of a fixed value font size, edited the margin of the modal to adjust for really big and small screens in reference to the modals positioning, on big screens the modal would be at the bottom of the screen, positioning of modal looks good on both small and large screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,11 @@
 $primary: rgba(255, 255, 224, 0.957);
 
 $fontSize: clamp(.7rem, 2.5vw + 1rem, 1.2rem);
-$h1Size: clamp(.7rem, 3vw + 1rem, 4rem);
+$h1FontSize: clamp(.7rem, 3vw + 1rem, 3rem);
+$h2FontSize: clamp(.7rem, 4vw + .5rem, 2rem);
 $keyboardFontSize: clamp(.4rem, 2.5vw + .1rem, 1.5rem);
 $lrgFontSize: clamp(2rem, 5vw + 1rem, 4.5rem);
+$sliderFontSize: clamp(1rem, 3vw + 1rem, 2rem);
 
 $green: rgb(13, 193, 13);
 $yellow: rgb(227, 227, 15);
@@ -42,7 +44,7 @@ body {
     border-top: 0 solid transparent;
     text-align: center;
     max-width: 1200px;
-    font-size: $h1Size;
+    font-size: $h1FontSize;
 }
 
 /* ------------ Components ------------*/
@@ -142,7 +144,7 @@ body {
         display: inline-block;
         width: 1.5em;
         height: 1em;
-        font-size: clamp(1rem, 3vw + 1rem, 2rem);
+        font-size: $sliderFontSize;
     }
     /* Hide default HTML checkbox */
     .switch input {
@@ -153,7 +155,7 @@ body {
     
     /* The slider */
     .slider {
-        font-size: clamp(1rem, 3vw + 1rem, 2rem);
+        font-size: $sliderFontSize;
         position: absolute;
         cursor: pointer;
         top: 0;
@@ -312,7 +314,7 @@ body {
     line-height: 1.5;
     text-align: center;
     div {
-        margin: 30% auto;
+        margin: min(30%, 20em) auto;
         width: 80%;
         max-width: 700px;
         padding: 1em;
@@ -323,7 +325,7 @@ body {
             color: transparent;
             text-shadow: -1px 0 #1f43e0, 0 1px #7087eb, 1px 0 #526de5, 0 -1px #526de5;
             padding: .5em;
-            font-size: 2em;
+            font-size: $h2FontSize;
         }
         span {
             font-weight: bold;
